Add: Shawn Jordison: PDF Accessibility Table Headers and Summary

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -625,6 +625,10 @@
         It then shows what the resulting table sounds like in a screen reader.
         It also show the Read Out Loud functionality in Adobe Acrobat, which is not a true screen reader and ignores the connections between the data cells and the header cells.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=0ycec3KvXMo"><abbr>PDF</abbr> Accessibility Table Headers and Summary</a>
+        (<i class="ytchannel">Shawn Jordison</i> on YouTube, 3 minutes, 25.12.2020).
+      </li>
       <li>Castro, Dax:
         <a href="https://www.youtube.com/watch?v=ykP9KAAVhSg"><abbr>PDF</abbr> Accessibility Merging Tables</a>
         (<i class="ytchannel"><abbr>PDF</abbr> Accessibility</i> on YouTube, 8 minutes, 17.02.2020).
@@ -731,7 +735,7 @@
     <h3><abbr>PDF</abbr> Accessibility Standards and Background Documents</h3>
     <ul>
       <li>
-        <a href="https://www.iso.org/standard/64599.html">ISO 14289-1:2014 - Document management applications — Electronic document file format enhancement for accessibility — Part 1: Use of ISO 32000-1 (<abbr>PDF</abbr>/<abbr>UA</abbr>-1)</a>,
+        <a href="https://www.iso.org/standard/64599.html">ISO 14289-1:2014 - Document management applications — Electronic document file format enhancement for accessibility — Part 1: Use of ISO 32000-1 (<abbr>PDF</abbr>/<abbr>UA</abbr>-1)<!--77 pages; CHF 88--></a>,
         <i class="website">ISO</i>, 2012 (accessed on 15.07.2021).
         <br />The first version of this standard was published in 2012.The revised version from 2013 was last reviewed and confirmed in 2020.
         (This is not a &ldquo;publicly available standard&rdquo;; readers must purchase it from ISO or from one of its national member organisations.)
