Add: Header and footer artifacts

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -191,6 +191,11 @@
           Nothing on keyboard access or screen reader access.
         * Lisa Doe: "How to Create a Fillable Form in Word | Microsoft Word Tutorials", 46 minutes, 14.04.2020: https://www.youtube.com/watch?v=T4aRXxeTD-Y
           Looks like how not to do it for accessibility (relies on text boxes and shapes; does not use Word's form elements).
+
+        * Add the file name, date, author or other document properties to a header or footer: https://support.microsoft.com/en-us/office/add-the-file-name-date-author-or-other-document-properties-to-a-header-or-footer-dc62245f-b6af-45b2-a521-17753fc3539e
+        * Hinzufügen des Dateinamens, des Datums, des Autors oder anderer Dokumenteigenschaften zu einer Kopf- oder Fußzeile: https://support.microsoft.com/de-de/office/hinzuf%c3%bcgen-des-dateinamens-des-datums-des-autors-oder-anderer-dokumenteigenschaften-zu-einer-kopf-oder-fu%c3%9fzeile-dc62245f-b6af-45b2-a521-17753fc3539e?ui=de-DE&rs=de-DE&ad=DE
+        * Word 2016 Tipps und Tricks: Feldfunktion DocProperty: https://www.handbuch-experten.de/blog/word-2016-tipps-und-tricks-feldfunktion-docproperty/
+        * How do you add and change, the Document Property labels in Quick Parts?: https://answers.microsoft.com/en-us/msoffice/forum/msoffice_word-mso_winother-mso_2016/how-do-you-add-and-change-the-document-property/c852b960-8405-46af-b09f-ec2ab77665c6
       -->
 
     <h4>Microsoft Word Forms</h4>
@@ -449,10 +454,6 @@
         this is a YouTube playlist containing videos on topics such as editing <abbr>OCR</abbr> done in Adobe Acrobat,
         tagging <abbr>PDF</abbr> and basic accessibility checking.
       </li>
-      <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxoDdvHhkK10EPrBcR-nUekq">Creating Accessible Tables in <abbr>PDF</abbr> Files</a>
-        (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019):
-        this is a YouTube playlist containing videos on fixing <abbr>PDF</abbr> tables and fixing reading order.
-      </li>
       <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxqf4qt20coIdHUr29JhtrFD">Adobe Acrobat Accessibility series</a>
         (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019).
       </li>
@@ -552,12 +553,17 @@
         (<i class="ytchannel">Level Access</i> on YouTube, 2 minutes, 14.01.2014).
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=M-XKOEkE5Y4">Header and footer artifacts</a>
+        (<i class="ytchannel">Tagged <abbr>PDF</abbr></i> on YouTube, 6 minutes, 24.05.2015).
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=tEkZUlNfcZo">Accessible <abbr>PDF</abbr> screen reader demo</a>
         (<i class="ytchannel"><abbr>UC</abbr> Systemwide Talent Management</i> on YouTube, 2 minutes, 14.07.2020).
         <br />This video shows how <abbr>NVDA</abbr> reads a correctly tagged <abbr>PDF</abbr> that contains headings, normal text, links and a data table.
       </li>
       <!--
         * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
+        * Tagged PDF (website by Kenny @@@): https://taggedpdf.com/
         * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
           see https://equidox.co/
         * "Tagged, accessible PDFs from Adobe InDesign - fast & reliably with MadeToTag", axaio software, 6 minutes, 17.08.2018: https://www.youtube.com/watch?v=Ap7_xcmeSU0
@@ -569,12 +575,19 @@
           https://verapdf.org/
           https://github.com/veraPDF
         * https://github.com/Mogztter/asciidoctor-web-pdf
+        * Carol Bee: "Creating a Calculated Field in Adobe Acrobat Pro", 7 minutes, 26.05.2015: https://www.youtube.com/watch?v=ezxKxqoOd1Q
+          This video is a bit dated: If all you need is a sum, you don't need to use "Simplified field notations"; you can use "Value is the [sum]" just above it. In that case, it does not even matter that the name values contain spaces, since you just get a list of checkboxes for the fields in the document and you simply check the checkboxes for the fields you want to get summed.
+          Also, it is now perfectly fine to have spaces before and after the plus signs when you use the "Simplified field notations".
       -->
     </ul>
     <!--https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
 
     <h3>Accessible Tables in <abbr>PDF</abbr></h3>
     <ul>
+      <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxoDdvHhkK10EPrBcR-nUekq">Creating Accessible Tables in <abbr>PDF</abbr> Files</a>
+        (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019):
+        this is a YouTube playlist containing videos on fixing <abbr>PDF</abbr> tables and fixing reading order.
+      </li>
       <li><span lang="de">Frölich, Dirk:
         <a href="https://www.youtube.com/watch?v=6vC-w1sXH-o">Barrierefreie Tabellen in <abbr>PDF</abbr>-Dokumenten – Teil I/III: <abbr>PDF</abbr>-Dokumente mit Word erstellen</a>
         (<i class="ytchannel">df-edv</i></span> on YouTube, 10 minutes, 21.03.2018).
