Add: Blackmore: The Importance of Role Mapping in Acrobat

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -561,6 +561,10 @@
         (<i class="ytchannel"><abbr>UC</abbr> Systemwide Talent Management</i> on YouTube, 2 minutes, 14.07.2020).
         <br />This video shows how <abbr>NVDA</abbr> reads a correctly tagged <abbr>PDF</abbr> that contains headings, normal text, links and a data table.
       </li>
+      <li>Blackmore, Gershon:
+        <a href="https://www.levelaccess.com/importance-role-mapping-acrobat/">The Importance of Role Mapping in Acrobat</a>,
+        <i class="blog">Level Access blog</i>, 27.04.2015.
+      </li>
       <!--
         * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
         * Tagged PDF (website by Kenny @@@): https://taggedpdf.com/
