Add: Diffuser l’écran et l’audio d’un mobile sur ordinateur ou vidéoprojecteur ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1436,6 +1436,10 @@
           <a href="https://www.computerbild.de/artikel/cb-News-Internet-Geheimfunktionen-fuer-Alexa-Barrierefreiheit-im-Alltag-30265693.html" hreflang="de">Geheimfunktionen für Alexa: Barrierefreiheit im Alltag mit fünf Kniffen</a>,
           <i class="website">Computer Bild</i>,</span> 03.06.2021.
         </li>
+        <li><span lang="fr">Duchateau, Sylvie:
+          <a href="https://access42.net/letsview-diffuser-ecran-audio-mobile-sur-ordinateur-videoprojecteur?lang=fr" hreflang="fr">Diffuser l’écran et l’audio d’un mobile sur ordinateur ou vidéoprojecteur avec LetsView</a>,
+          <i class="website">Access42</i>,</span> 06.07.2021.
+        </li>
       </ul>
     </section>
 
