Add: Shinohra et al: Why getting more people with disabilities developing technology ...; Zucharias

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -888,6 +888,14 @@
     <section>
       <h2>Other Links</h2>
       <ul>
+        <li>Shinohara, Kristen; Tigwell, Garreth:
+          <a href="https://theconversation.com/why-getting-more-people-with-disabilities-developing-technology-is-good-for-everyone-159619">Why getting more people with disabilities developing technology is good for everyone</a>,
+          <i class="website">The Conversation</i>, 03.06.2021 (Creative Commons).
+        </li>
+        <li>Zacharias, Julia:
+          <a href="https://www.applause.com/blog/accessibility-interview-with-bbva">Accessibility interview with <abbr>BBVA</abbr></a>,
+          <i class="website">Applause</i>, 20.06.2021.
+        </li>
         <li>
           <a href="https://accessible-techcomm.org/">Accessible Techcomm</a>:
           this is a website by a not-for-profit educational organization that provides resources on making technical communication more accessible.
