Add UX SE question

--- a/designforall.html
+++ b/designforall.html
@@ -101,6 +101,9 @@
       <li>Hassell, Jonathan:
         <i class="booktitle">Inclusive Design for Organisations: Including your missing 20% by embedding web and mobile accessibility</i>.
         <a href="https://rethinkpress.com/product/inclusive-design-for-organisations-by-professor-jonathan-hassell/">Rethink Press, 2019</a>.
+        <!-- https://www.amazon.co.uk/dp/1781334005
+          https://www.amazon.de/Inclusive-Design-Organisations-Including-accessibility/dp/1781333955/
+        -->
       </li>
       <li>Aragall, Francesc; Montana, Jordi:
         <i class="booktitle">Universal Design: The HUMBLES Method for User-Centred Business</i>.
@@ -126,6 +129,13 @@
       <li>Web Accessibility Initiative:
         <a href="https://www.w3.org/WAI/users/involving">Involving Users in Web Projects for Better, Easier Accessibility</a>.
       </li>
+      <li>
+        <a href="https://ux.stackexchange.com/q/4499/91974">Including users with disabilities in user centered design</a>,
+        question posted by Andi Snow-Weaver on User Experience Stack Exchange in October 2009:
+        <blockquote>Many of the methodologies used in the early phases of user centered design, such as card sorting and paper prototyping, are not accessible to people with disabilities.
+          Anybody have any advice on alternative methods that can be used to include users with disabilities in these early phases of <abbr>UCD</abbr>?
+        </blockquote>
+      </li>
     </ul>
 
     <!--
@@ -135,6 +145,29 @@
         The claim that "Accessibility is based upon objective, measurable facts, and is concerned only with technical or logistical truths" is also incorrect: you can't measure whether a text alternative is appropriate, and many other WCAG success criteria require judgement calls.
         The definition of "Inclusive Design" completely ignores the aspect of special needs and replaces it with LGBTQ+ and similar stuff??!!
         This is not "Inclusive Design" but creating politically correct content.
+    -->
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
+        <li><span lang="de">
+          <a href="" hreflang="de"></a>,
+          <i class=""></i>,</span>
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
+        </li>
+        <li>:
+          <i class="booktitle"></i>. ( pages)
+          <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+      </ul>
+    <section>
     -->
   </main>
 
