--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -703,7 +703,7 @@
       -->
     </ul>
 
-    <h3>Checking <abbr>PDF</abbr> Accessibility</h3>
+    <h3 id="pdf-checkers">Checking <abbr>PDF</abbr> Accessibility</h3>
     <ul>
       <li><span lang="de">Stiftung «Zugang für alle»:
         <a href="https://www.access-for-all.ch/ch/pdf-werkstatt/pdf-accessibility-checker-pac.html" hreflang="de"><abbr>PDF</abbr> Accessibility Checker (<abbr>PAC</abbr> 3)</a></span>.
