add: pdf-lib.js.org

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -672,6 +672,19 @@
         <a href="https://www.youtube.com/watch?v=BPytQ8n66x4">Advanced <abbr>PDF</abbr> Accessibility with Adobe Acrobat Pro DC: Forms</a>
         (<i class="ytchannel"><abbr>UA</abbr> Technology Accessibility</i> on YouTube, 56 minutes, 25.11.2019).
       </li>
+      <!--
+      <li>
+        <a href="https://www.youtube.com/watch?v=akF7wa0ggvQ">Setting Layer Visibility to Create Advanced Forms with Adobe Acrobat</a>
+        (<i class="ytchannel">New Horizons Des Moines</i> on YouTube, 9 minutes, 29.07.2019).
+        <br />[@@check whether this is accessible or can be made accessible]
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=x7sNpSe1Wxc">Creating Advanced Forms with Field Visibility in Adobe Acrobat</a>
+        (<i class="ytchannel">New Horizons Des Moines</i> on YouTube, 13 minutes, 07.01.2021).
+        <br />This video demonstrates a method to display conditional form fields without using layers.
+        [@@check whether this is accessible or can be made accessible]
+      </li>
+      -->
     </ul>
 
     <h3>Accessible <abbr>PDF</abbr> and InDesign</h3>
@@ -746,6 +759,9 @@
         <i class="blog">FineReader Blog</i>, 09.01.2019.
         <br />This blog post explains what <abbr>PDF</abbr>/<abbr>UA</abbr> is and how you can create <abbr>PDF</abbr>/<abbr>UA</abbr> documents with FineReader.
         (The process relies on <abbr>OCR</abbr> and it is not obvious how <abbr>OCR</abbr> alone can be used to generate an accessible <abbr>PDF</abbr> document.)
+      </li>
+      <li>
+        <a href="https://pdf-lib.js.org/"><abbr>PDF</abbr>-Lib</a> (no date; accessed on 20.07.2020).
       </li>
     </ul>
 
