--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -755,6 +755,10 @@
         <br />In addition to general information about the standard, this article also links to examples of <abbr>PDF</abbr>lib 9 application code.
       </li>
       <li>
+        <a href="https://docraptor.com/">DocRaptor: <abbr>HTML</abbr> to <abbr>PDF</abbr> <abbr>API</abbr></a>
+        (<q>powered by the Prince <abbr>HTML</abbr>-to-<abbr>PDF</abbr> engine</q>) (accessed on 28.07.2021).
+      </li>
+      <li>
         <a href="https://pdf.abbyy.com/blog/pdf-ua/"><abbr>PDF</abbr>/<abbr>UA</abbr> – with focus on accessibility</a>,
         <i class="blog">FineReader Blog</i>, 09.01.2019.
         <br />This blog post explains what <abbr>PDF</abbr>/<abbr>UA</abbr> is and how you can create <abbr>PDF</abbr>/<abbr>UA</abbr> documents with FineReader.
