Add: Rietveld: Blind people don’t visit my website

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -70,6 +70,10 @@
           <a href="https://accessibility.ncsu.edu/"><abbr>IT</abbr> Accessibility Handbook</a>,
           <i class="website">North Carolina State University</i>.
         </li>
+        <li>Rietveld, Rian:
+          <a href="https://a11y-collective.com/blog/blind-people-dont-visit-my-website/">“Blind people don’t visit my website.”</a>,
+          <i class="blog">The A11Y Collective</i>, 31.03.2021, updated on 14.04.2021.
+        </li>
         <li>Fisher, Carie:
           <a href="https://medium.com/statuscode/getting-started-with-website-accessibility-5586c7febc92">Getting Started with Website Accessibility</a>,
           <i class="blog">Statuscode</i>, 11.09.2017.
@@ -226,7 +230,7 @@
           <!--Referrer: https://twitter.com/A11yNews/status/1366402899694280706 -->
         </li>
         <li>
-          <a href="https://www.youtube.com/watch?v=_gwmDgRtuD8">Sarah Horton: &ldquo;Involving People with Disabilities in UX Research&rdquo;</a>
+          <a href="https://www.youtube.com/watch?v=_gwmDgRtuD8">Sarah Horton: &ldquo;Involving People with Disabilities in <abbr>UX</abbr> Research&rdquo;</a>
           (<i class="ytchannel">Inclusive Design 24 #id24</i> on YouTube, 60 minutes, 07.07.2019).
         </li>
       </ul>
