--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -128,6 +128,11 @@
           <!--Referrer: https://www.mockplus.com/blog/post/best-animated-websites -->
         </li>
         <li>
+          <a href="https://cathe.com/what-role-does-estrogen-play-in-muscle-strength/">What Role Does Estrogen Play in Muscle Strength?</a>,
+          <i class="website">Cathe Friedrich</i>, 31.01.2016; accessed on 05.08.2021).
+          This page has a video on a loop in the header section.
+        </li>
+        <li>
           <a href="https://wormhole.app/">Wormhole (file sharing)</a>: animated background that represents a wormhole
           (background image slowly rotates around the centre). (Accessed on 15.06.2021.)
         </li>
