Add TCEQ resources about accessible PDF

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -512,11 +512,6 @@
         <i class="website">Claro Software Support</i>, 27.03.2012.
         <!--Old but still informative. @@download PDF: http://www.clarosoftware.com/pdfs/PDF%20and%20Accessibility.pdf -->
       </li>
-      <li>
-        <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
-        a <abbr>PDF</abbr> generation library for Java and .NET.
-        It supports <abbr>PDF XA</abbr> and can convert <abbr>PDF</abbr> to <abbr>HTML</abbr>.
-      </li>
       <li><span lang="de">Posselt, Klaas; Frölich, Dirk:
         <i class="booktitle">Barrierefreie <abbr>PDF</abbr>-Dokumente erstellen</i>. dpunkt.verlag, 2019.</span> (614 pages)
         <a href="https://dpunkt.de/produkt/barrierefreie-pdf-dokumente-erstellen/" hreflang="de"><abbr>ISBN</abbr> 978-3-86490-487-5</a>.
@@ -547,6 +542,21 @@
       <li>Rivenburgh, Kris:
         <a href="https://medium.com/@krisrivenburgh/the-pdf-accessibility-guide-how-to-make-your-portable-documents-accessible-6e77a21a098f">The <abbr>PDF</abbr> Accessibility Guide: How to Make Your Portable Documents Accessible</a>,
         <i class="blog">Kris Rivenburgh</i> (on Medium), 17.06.2019.
+      </li>
+      <li>Texas Commission on Environmental Quality (<abbr>TCEQ</abbr>):
+        <ol>
+          <li><a href="https://www.youtube.com/playlist?list=PLwzfZK5z8LrHMH5h0C-mj98cFHY5VCt43">Unit 1 – Getting Started with Adobe Acrobat</a>:
+            playlist containing 3 videos, including two videos about <abbr>PDF</abbr> forms.
+          </li>
+          <li><a href="https://www.youtube.com/playlist?list=PLwzfZK5z8LrE319qD2UEC22_LqcUQbkG8">Unit 2 – Making an Accessible <abbr>PDF</abbr></a>:
+            playlist containing 14 videos, including the following:
+            <a href="https://www.youtube.com/watch?v=udjjT3S7g48">Designating <abbr>PDF</abbr> Artifacts</a>
+            (<i class="ytchannel"><abbr title="Texas Commission on Environmental Quality">TCEQ</abbr>News</i> on YouTube, 9 minutes, 15.07.2021; accessed on 05.08.2021).
+          </li>
+          <li><a href="https://www.youtube.com/playlist?list=PLwzfZK5z8LrEj91TOV12bFeuQcBopdCWx">Unit 3 – Testing PDF Accessibility</a>:
+            playlist containing 9 videos.
+          </li>
+        </ol>
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=fCrZhnFrxjk">Web Accessibility 101: Screen Magnification &amp; Reflow in Adobe Acrobat</a>
@@ -582,6 +592,10 @@
         * Carol Bee: "Creating a Calculated Field in Adobe Acrobat Pro", 7 minutes, 26.05.2015: https://www.youtube.com/watch?v=ezxKxqoOd1Q
           This video is a bit dated: If all you need is a sum, you don't need to use "Simplified field notations"; you can use "Value is the [sum]" just above it. In that case, it does not even matter that the name values contain spaces, since you just get a list of checkboxes for the fields in the document and you simply check the checkboxes for the fields you want to get summed.
           Also, it is now perfectly fine to have spaces before and after the plus signs when you use the "Simplified field notations".
+        * Hilfe für LibreOffice 6.0: Als PDF exportieren: https://help.libreoffice.org/6.0/de/text/shared/01/ref_pdf_export.html
+          "Speichert das aktuelle Dokument im Portable Document Format (PDF) Version 1.4."
+        * Hilfe für LibreOffice 7.0: Als PDF exportieren: https://help.libreoffice.org/7.0/de/text/shared/01/ref_pdf_export.html
+          "Speichert das aktuelle Dokument im Portable Document Format (PDF) Version 1.4." @@check in Adobe Acrobat
       -->
     </ul>
     <!--https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
@@ -744,6 +758,11 @@
       <li>
         <a href="https://www.axes4.com/axespdf-for-word-ueberblick.html" hreflang="de" lang="de">axes<abbr>PDF</abbr> für Word</a>:
         this is a commercial extension for Microsoft Word (version 2013 or higher) for Windows (Windows 7 or higher with .NET Framework 4.6.2).
+      </li>
+      <li>
+        <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
+        a <abbr>PDF</abbr> generation library for Java and .NET.
+        It supports <abbr>PDF XA</abbr> and can convert <abbr>PDF</abbr> to <abbr>HTML</abbr>.
       </li>
       <li>
         <a href="https://kb.itextsupport.com/home/it7kb/ebooks/itext-7-jump-start-tutorial-for-java/chapter-7-creating-pdf-ua-and-pdf-a-documents">Chapter 7: Creating <abbr>PDF</abbr>/<abbr>UA</abbr> and <abbr>PDF</abbr>/<abbr>A</abbr> documents</a>,
