Add: WCAG 2.0 Mapping to PDF/UA

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -824,6 +824,10 @@
         Some of these new criteria are typically not relevant to <abbr>PDF</abbr>:  2.2.6 (Timeouts) and 2.5.2 (Pointer Cancellation).
       </li>
       <li>
+        <a href="https://www.adobe.com/accessibility/products/acrobat/wcag-2-mapping-to-pdf-ua.html"><abbr>WCAG</abbr> 2.0 Mapping to <abbr>PDF/UA</abbr></a>,
+        <i class="website">Adobe</i>, 24.11.2019 (accessed on 05.08.2021).
+      </li>
+      <li>
         <a href="https://commonlook.com/Accessible-PDF-A-Glossary-of-Terms/">Accessible <abbr>PDF</abbr>: A Glossary of Terms</a>,
         <i class="website">CommonLook</i>, 31.05.2019.
       </li>
