--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -49,14 +49,19 @@
 
   <main>
     <p>The resources on this page are related to documents, audio and video, which may be found
-      on websites, etc.
+      on websites, in other words, web resources that are not implemented using only <abbr>HTML</abbr> and <abbr>CSS</abbr>.
       For <abbr>HTML</abbr>-based web content, see the pages on
       <a href="WebAppAccessibilityResources.html">Web Applications</a>
-      and 
+      and
       <a href="WebAccessibilityTools.html">Web Accessibility Tools</a>.
     </p>
 
     <h2>Office Documents</h2>
+    <p>This section focuses on office formats that were designed to be edited and which are often
+      used as a source for other web content, either <abbr>PDF</abbr> or (less commonly) <abbr>HTML</abbr>.
+      In such scenarios, the source format needs to be made as accessible as possible before exporting
+      or saving the content in different target format.
+    </p>
     <h3>General Resources</h3>
     <p>Guidance for multiple applications or office suites.</p>
     <ul>
