--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -903,6 +903,21 @@
       </li>
     </ul>
 
+    <h3>Other Resources about <abbr>PDF</abbr></h3>
+    <p>The following resources are listed here temporarily. They are not related to accessibility; some research is required on their impact on accessibility
+      or on how certain features and capabilities described in them can be used in an accessible manner.</p>
+    <ul>
+      <li>Harder, Jennifer:
+        <i class="booktitle">Enhancing Adobe Acrobat DC Forms with JavaScript</i>. Apress, 2017. (XXIV + 363 pages)
+        <a href="https://www.apress.com/de/book/9781484228920"><abbr>ISBN</abbr> 978-1-4842-2893-7 (e-book) / 978-1-4842-2892-0 (softcover)</a>.
+        <!--https://link.springer.com/book/10.1007/978-1-4842-2893-7-->
+      </li>
+      <li>
+        <a href="https://helpx.adobe.com/acrobat/using/applying-actions-scripts-pdfs.html">Applying actions and scripts to <abbr>PDFs</abbr></a>,
+        <i class="website">Adobe</i> (no date; accessed on 20.07.2020).
+      </li>
+    </ul>
+
     <h2 id="audio-video">Audio and Video</h2>
     <h3 id="captioning-guidelines">Captioning Guidelines</h3>
     <ul>
