Add release of PAC 2021 as successor of PAC 3

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -737,10 +737,10 @@
 
     <h3 id="pdf-checkers">Checking <abbr>PDF</abbr> Accessibility</h3>
     <ul>
-      <li><span lang="de">Stiftung «Zugang für alle»:
-        <a href="https://www.access-for-all.ch/ch/pdf-werkstatt/pdf-accessibility-checker-pac.html" hreflang="de"><abbr>PDF</abbr> Accessibility Checker (<abbr>PAC</abbr> 3)</a></span>.
-        This is a <abbr>PDF</abbr> accessibility checker for Microsoft Windows (all versions since Windows Vista).
-        It is a freeware product, but users are not allowed to distribute copies of the software or to automate the accessibility evaluation process.
+      <li>
+        <a href="https://pdfua.foundation/en/pdf-accessibility-checker-pac"><abbr>PAC</abbr> 2021 - The Free <abbr>PDF</abbr> Accessibility Checker</a>,
+        <i class="website"><abbr>PDF/UA</abbr> Foundation</i> (no date; accessed on 10.08.2021).
+        <br />This accessibility checker was released in August 2021 as the successor of <abbr>PAC</abbr> 3.
       </li>
       <li><a href="https://www.youtube.com/watch?v=BQTB_Yik2as">How to check if a <abbr>PDF</abbr> is accessible using <abbr>PAC</abbr> 3 0</a>
         (<i class="ytchannel">Accessibility</i> on YouTube (University of Akron University Libraries), 2 minutes, 25.06.2020).
@@ -755,6 +755,12 @@
         The <a href="https://www.youtube.com/watch?v=5daOdS2yJYM">YouTube video &ldquo;Introduction to <abbr>PAVE</abbr> v2.0&rdquo;</a>
         shows how the tool works.
         There is also a <a href="https://www.youtube.com/watch?v=u_Le6aNsO0U">German version of the video</a>.
+      </li>
+      <li><span lang="de">Stiftung «Zugang für alle»:
+        <a href="https://www.access-for-all.ch/ch/pdf-werkstatt/pdf-accessibility-checker-pac.html" hreflang="de"><abbr>PDF</abbr> Accessibility Checker (<abbr>PAC</abbr> 3)</a></span>.
+        This is a <abbr>PDF</abbr> accessibility checker for Microsoft Windows (all versions since Windows Vista).
+        It is a freeware product, but users are not allowed to distribute copies of the software or to automate the accessibility evaluation process.
+        (Released on December 2017.)
       </li>
     </ul>
 
