Add paragraph about accessibility issues in LibreOffice content

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -418,6 +418,27 @@
         <a href="http://accessodf.sourceforge.net/MappingToWCAG.html">Mapping AccessODF Checks to Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2.0</a>
       </li>
     </ul>
+    <p>LibreOffice still has a number of accessibility issues when saving or exporting to other formats. A number of bugs have been reported;
+      see for example the following metabugs: <a href="https://bugs.documentfoundation.org/show_bug.cgi?id=101912">Bug 101912 (a11y) - [META] Accessibility (<abbr>a11y</abbr>) bugs and enhancements</a>
+      (some of these bugs are about the user interface rather than file formats) and
+      <a href="https://bugs.documentfoundation.org/show_bug.cgi?id=139007">Bug 139007 (<abbr>PDF</abbr>-Accessibility) - [META] <abbr>PDF</abbr> accessibility </a>.
+      Not all accessibility issues are linked to relevant meta bugs, for example,
+      <a href="https://bugs.documentfoundation.org/show_bug.cgi?id=139736">Bug 139736 - Images and frames in header violate <abbr>PDF/UA</abbr></a> (reported in January 2021).
+      <!--other examples:
+        Bug 135192 - Accessibility of PDF export: "Export as > Tagged PDF" does not export correct tags for tables: https://bugs.documentfoundation.org/show_bug.cgi?id=135192
+          Impress bug; requires verification / additional info with regard to what PDF/UA requires.
+        Bug 137268 - Accessibility: Text boxes for entering distances don't expose value to screen reader: https://bugs.documentfoundation.org/show_bug.cgi?id=137268 [Windows]
+        Bug 142359 - ACCESSIBILITY: Language tagging is lost when merging LO generated PDFs with Acrobat: https://bugs.documentfoundation.org/show_bug.cgi?id=142359
+        Bug 143311 - Exported PDF doesn't mark decorative images correctly: https://bugs.documentfoundation.org/show_bug.cgi?id=143311
+        Bug 67562 - EDITING: Implement acronym management: https://bugs.documentfoundation.org/show_bug.cgi?id=67562 (submitted in 2013; not submittted as an accessibility-related bug)
+        Other meta bugs:
+        Bug 55571 (a11y-macOS) - [META] ACCESSIBILITY: Tracking bug for issues related to the macOS Accessibility API: https://bugs.documentfoundation.org/show_bug.cgi?id=55571
+        Bug 60251 (a11y-Windows) - [META] ACCESSIBILITY: Tracking Windows OS accessibility and AT issues: https://bugs.documentfoundation.org/show_bug.cgi?id=60251
+        Bug 36549 (a11y-Linux) - [META] ACCESSIBILITY: Tracking bug for issues affecting a11y ATK and GNOME Orca screen reader support: https://bugs.documentfoundation.org/show_bug.cgi?id=36549
+        Bugs requiring renewed verification:
+        Bug 108582 - NVDA Screen Review mode dropping letters and running together words when sounding, Object Review mode correctly sounds words: https://bugs.documentfoundation.org/show_bug.cgi?id=108582
+      -->
+    </p>
     <p>Forms created in LibreOffice Writer or OpenOffice Writer can be exported to <abbr>PDF</abbr> forms;
       one only needs to activate the checkbox &ldquo;Create <abbr>PDF</abbr> form&rdquo; in the &ldquo;<abbr>PDF</abbr> Options&rdquo; dialog box.
       There are no resources that discuss the accessibility of forms created in Writer or exported as <abbr>PDF</abbr> from Writer.
