Move Horton's ID24 talk to Design-for-all page

--- a/designforall.html
+++ b/designforall.html
@@ -126,6 +126,10 @@
       <li>Lawton-Henry, Shawn:
         <a href="http://www.uiaccess.com/accessucd/index.html">Just Ask: Integrating Accessibility Throughout Design</a>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=_gwmDgRtuD8">Sarah Horton: &ldquo;Involving People with Disabilities in <abbr>UX</abbr> Research&rdquo;</a>
+        (<i class="ytchannel">Inclusive Design 24 #id24</i> on YouTube, 60 minutes, 07.07.2019).
+      </li>
       <li>Web Accessibility Initiative:
         <a href="https://www.w3.org/WAI/users/involving">Involving Users in Web Projects for Better, Easier Accessibility</a>.
       </li>
