Add links to LibreOffice documentation related to forms

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -447,6 +447,20 @@
         nor how forms can be filled in using only the keyboard.
       </li>
       <li>
+        <a href="https://help.libreoffice.org/7.1/en-US/text/shared/02/01170600.html?DbPAR=SHARED#bm_id3143284">Form Navigator</a>,
+        <i class="website">LibreOffice 7.1 Help</i> (accessed on 10.08.2021).
+        <br />No information related to accessibility.
+      </li>
+      <li>
+        <a href="https://help.libreoffice.org/7.1/en-US/text/shared/02/01170000.html?DbPAR=SHARED">Form Controls (LibreOffice 7.1 Help)</a>,
+        <i class="website">LibreOffice 7.1 Help</i> (accessed on 10.08.2021).
+      </li>
+      <li>
+        <a href="https://help.libreoffice.org/7.1/en-US/text/swriter/04/01020000.html">Shortcut Keys for LibreOffice Writer</a>,
+        <i class="website">LibreOffice 7.1 Help</i> (accessed on 10.08.2021).
+        <br />This document does not list shortcuts that might help filling in a form using only the keyboard.
+      </li>
+      <li>
         <a href="https://bugs.documentfoundation.org/show_bug.cgi?id=143818">Bug 143818 - Writer form fields are not accessible using only the keyboard [accessibility]</a>,
         <i class="website">The Document Foundation Bugzilla</i>, reported on 10.08.2021.
       </li>
