--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <p>When <abbr>UX</abbr> doesn't consider ALL users, shouldn't it be known as "SOME Users' Experience" or... <abbr>SUX</abbr>?</p>
     <p><cite><a href="https://twitter.com/thebillygregory/status/552466012713783297">Billy Gregory on Twitter, 06.01.2015</a></cite></p>
   </blockquote>
+  <p class="site-moved-warning">This website is no longer maintained here. It has moved to <a href="https://cstrobbe.gitlab.io/AccessibilityResources/">GitLab</a>.</p>
 
   <section>
     <h2>Web</h2>
