Daniel Kennard's nOverlay

--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -84,7 +84,12 @@
       <!--Tools and fonts:-->
       <li>The
         <a href="https://www.atbar.org/"><abbr>AT</abbr>Bar</a>
-        contains a number of options that can make text more readable for people with dyslexia. 
+        contains a number of options that can make text more readable for people with dyslexia.
+      </li>
+      <li>Daniel Kennard's
+        <a href="https://chrome.google.com/webstore/detail/noverlay/clhfmmanmdkmblpljegdibilonemohdo?hl=en-GB">nOverlay</a>
+        is a extension for Chrome and Chromium. The developer writes:
+        <q>nOverlay started life as a tool that I wrote for my dyslexic wife whilst she was studying at University. The tool worked so well for her that she urged me to develop it further and release it to the world - nOverlay is the result of her relentless requests and she assures me that she now simply cannot browse the web without it!</q>
       </li>
     </ul>
 
